k8s-example/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bedrock
  labels:
    application-name: bedrock
