k8s-example/3-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bedrock
  namespace: bedrock
  labels:
    application-name: bedrock
    application-tier: fpm
spec:
  containers:
  - name: nginx
    image: cloudyne.azurecr.io/php:8-bedrock
    imagePullPolicy: Always
    ports:
    - containerPort: 8123
      name: fpm
    # volumeMounts:
    # - name: bedrock-storage
    #   mountPath: /app
  imagePullSecrets:
  - name: cloudyneazurecr
