k8s-example/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrock
  namespace: bedrock
spec:
  type: ClusterIP
  ports:
  - name: fpm
    port: 8123
    protocol: TCP
    targetPort: fpm
  selector:
    application-name: bedrock
    application-tier: fpm
