k8s-example/5-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bedrock
  namespace: bedrock
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    # nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "config-fpm-default"
    #nginx.org/location-snippets: |
    #  try_files $uri $uri/ web/$uri /index.php;
spec:
  ingressClassName: nginx
  rules:
  - host: azurefd-cdn.v3.nu
    http:
      paths:
      - backend:
          service:
            name: bedrock
            port:
              number: 8123
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - azurefd-cdn.v3.nu
